# AIT726_project

./: .gitignore  QUICKSTART.md  README.md  doj_ner_interactive.ipynb  pyproject.toml  quick_start.bat  requirements-tests.txt  requirements.txt
.github/workflows/: pytests.yml
config/: config.cfg
configs/: default.yaml
data/plot_data/: results_all_runs.csv  results_overall.csv  results_per_label.csv
data/processed/: dev.spacy  test.spacy  train.spacy
data/raw/: doj_press_releases.jsonl
models/ner_model/model-best/: config.cfg  meta.json
models/ner_model/model-best/ner/: model
models/ner_model/model-best/vocab/: strings.json
models/ner_model/model-last/: meta.json
models/ner_model/model-last/ner/: model  moves
notebooks/: 01-exploration.ipynb  02-modeling.ipynb
outputs/: review_report.json  review_report.txt
scripts/: download_data.sh  evaluate_model.py  inference.py  prepare_data.py  run_training.sh  train_model.py  train_spacy.py
src/: AIT726_project.code-workspace  create_visualizations_from_data.py  evaluation.py  ingest.py  legal_roles_report.py  ners_to_spans.py  preprocessing.py  prodigy_reporting.py  spacy_analysis.py  utils.py
src/ner/: dataset.py  features.py  model.py  predict.py  train.py
tests/: conftest.py  test_evaluation.py  test_ingest.py  test_ner.py
