[tool.poetry]
name = "doj-press-release-nlp"
version = "0.1.0"
description = "A Natural Language Processing project to analyze Department of Justice press releases and identify key entities."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.0"
torch = "^1.9.0"
transformers = "^4.6.0"
spacy = "^3.1.0"
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"